--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.33.0",
-		"@sveltejs/adapter-auto": "^2.0.1",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.15.9",
 		"@types/cookie": "^0.5.1",
 		"eslint": "^8.39.0",
