--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,34 +5,29 @@ on:
     branches:
       - 'main'
 jobs:
-  test:
+  build:
     runs-on: ubuntu-22.04
     steps:
-      - name: Install Node.js
-        uses: actions/setup-node@v3
+      - name: Install Golang
+        uses: actions/setup-go@v4
         with:
-          node-version: 18
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: Checkout
+          go-version: 'stable'
+      
+      - name: Checkout canonical/chisel
         uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Install Playwright browsers
-        run: pnpx playwright install --with-deps
-
-      - name: Run Playwright tests
-        run: pnpm test
-
-      - uses: actions/upload-artifact@v3
-        if: always()
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+          repository: canonical/chisel
+          path: chisel
+
+      - name: Build canonical/chisel
+        run: |
+          cd $GITHUB_WORKSPACE/chisel/cmd && ./mkversion.sh
+          cd $GITHUB_WORKSPACE/chisel && go build -o $(pwd) $(pwd)/cmd/chisel && mv chisel $GITHUB_WORKSPACE
+
+      - name: Build systemd container
+        run: |
+          cd $GITHUB_WORKSPACE
+          mkdir -p container/opt
+          chisel cut --root container ca-certificates_data libstdc++6_libs
+          ls container
+
