--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+        with:
           path: app-repo
 
       - name: Install dependencies
