--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,38 @@ on:
     branches:
       - 'main'
 jobs:
+  test:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Install Playwright browsers
+        run: pnpx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: pnpm test
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
+
   build-and-deploy:
     runs-on: ubuntu-22.04
     steps:
@@ -36,7 +68,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 'stable'
-      
+
       - name: Checkout canonical/chisel
         uses: actions/checkout@v3
         with:
@@ -45,15 +77,6 @@ jobs:
 
       - name: Build chisel
         run: cd chisel-repo && ./cmd/mkversion.sh && go build -o $(pwd) $(pwd)/cmd/chisel && mv chisel $GITHUB_WORKSPACE
-          
-      - name: Copy slices into container
-        run: mkdir -p container/opt/app && ./chisel cut --root container ca-certificates_data libstdc++6_libs
-        
-      - name: Copy app into container
-        run: cp -r app-repo/{build,node_modules,package.json} container/opt/app
-
-      - name: Copy node binary into container
-        run: cp $(which node) container/opt
 
       - name: Create container file structure
         run: |
@@ -69,11 +92,20 @@ jobs:
 
           touch container/etc/machine-id container/usr/lib/os-release
 
+      - name: Copy slices into container
+        run: mkdir -p container/opt/app && ./chisel cut --root container ca-certificates_data libstdc++6_libs
+
+      - name: Copy app into container
+        run: cp -r app-repo/{build,node_modules,package.json} container/opt/app
+
+      - name: Copy node binary into container
+        run: cp $(which node) container/opt
+
       - name: Create .service file
         run: |
           cat <<-EOF > container/etc/systemd/system/${GITHUB_REPOSITORY##*/}.service
           [Unit]
-          Description=${{ github.repositoryUrl }}
+          Description=$GITHUB_REPOSITORY
 
           [Service]
           DynamicUser=yes
@@ -87,4 +119,4 @@ jobs:
           EOF
 
       - name: Compress container
-        run: mksquashfs container "${GITHUB_REPOSITORY##*/}_$(date --utc '+%FT%H%M')".raw -exit-on-error -quiet -all-root && ls -l
+        run: mksquashfs container "${GITHUB_REPOSITORY##*/}_$(date --utc '+%F.%H%M')".raw -exit-on-error -quiet -all-root
