--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 7
+          retention-days: 5
 
   build:
     needs: test
@@ -132,6 +132,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: container
-          path: *.raw
+          path: '*.raw'
           retention-days: 1
 
