--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,7 @@ jobs:
             container/sys \
             container/tmp \
             container/usr/lib \
+            container/var/lib/services/${GITHUB_REPOSITORY##*/} \
             container/var/tmp
 
           touch \
@@ -139,4 +140,3 @@ jobs:
           name: container
           path: '*.raw'
           retention-days: 1
-
