--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,51 +5,19 @@ on:
     branches:
       - 'main'
 jobs:
-  test:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Install Playwright browsers
-        run: pnpx playwright install --with-deps
-
-      - name: Run Playwright tests
-        run: pnpm test
-
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 5
-
   build:
-    needs: test
     runs-on: ubuntu-22.04
     steps:
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'pnpm'
 
       - name: Checkout app
         uses: actions/checkout@v3
@@ -140,29 +108,3 @@ jobs:
           name: container
           path: '*.raw'
           retention-days: 1
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Install SSH key
-        run: |
-          install -m 600 -D /dev/null ~/.ssh/id_ed25519
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          ssh-keyscan -H s1.winter-rose.design > ~/.ssh/known_hosts
-
-      - name: Copy container to server
-        run: |
-          scp ${{ SSH_USER }}@s1.winter-rose.design:/
-          sudo mv ~/*.raw /var/lib/portables
-
-      - name: Start container
-        run: |
-          sudo portablectl \
-            --enable \
-            --now \
-            --profile=trusted \
-            container.raw
-
-      - name: Cleanup
-        run: rm -rf ~/.ssh
